<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/homeColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/wk_title_bar_layout"/>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/homeColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app_lock_tips"
            android:lineSpacingExtra="3dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            style="@style/layoutBgPaddingSmall">
            <TextView
                android:text="@string/app_lock"
                android:layout_weight="1"
                style="@style/leftTextView"/>
            <com.chat.base.ui.components.SwitchView
                android:id="@+id/appLockSwitch"
                android:layout_width="50dp"
                android:layout_height="30dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/changePwdLayout"
            android:visibility="gone"
            style="@style/layoutBg">
            <TextView
                android:text="@string/change_app_lock_pwd"
                android:layout_weight="1"
                style="@style/leftTextView"/>
            <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/autoLockLayout"
            android:visibility="gone"
            style="@style/layoutBgPaddingSmall">
            <TextView
                android:text="@string/auto_lock_time"
                android:layout_weight="1"
                style="@style/leftTextView"/>
            <TextView
                android:id="@+id/autoLockTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/color999"
                android:text="@string/immediately"/>
            <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
