<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homeColor"
        android:orientation="vertical">

        <include layout="@layout/wk_title_bar_layout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/homeColor"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_title"
                        android:textColor="@color/color333"
                        android:textSize="@dimen/font_size_18"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/faq_q1"
                        android:textColor="@color/color333"
                        android:textSize="@dimen/font_size_15"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/faq_a1"
                        android:textColor="@color/color999"
                        android:textSize="@dimen/font_size_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginVertical="16dp"
                        android:background="@color/lineColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_q2"
                        android:textColor="@color/color333"
                        android:textSize="@dimen/font_size_15"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/faq_a2"
                        android:textColor="@color/color999"
                        android:textSize="@dimen/font_size_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginVertical="16dp"
                        android:background="@color/lineColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_q3"
                        android:textColor="@color/color333"
                        android:textSize="@dimen/font_size_15"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/faq_a3"
                        android:textColor="@color/color999"
                        android:textSize="@dimen/font_size_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginVertical="16dp"
                        android:background="@color/lineColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_q4"
                        android:textColor="@color/color333"
                        android:textSize="@dimen/font_size_15"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/faq_a4"
                        android:textColor="@color/color999"
                        android:textSize="@dimen/font_size_14" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginVertical="16dp"
                        android:background="@color/lineColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faq_q5"
                        android:textColor="@color/color333"
                        android:textSize="@dimen/font_size_15"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/faq_a5"
                        android:textColor="@color/color999"
                        android:textSize="@dimen/font_size_14" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
