<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homeColor"
        android:orientation="vertical">

        <include layout="@layout/wk_title_bar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingBottom="8dp"
                android:text="@string/security_privacy"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/msgPrivacyLayout"
                    style="@style/layoutBg">

                    <TextView
                        style="@style/leftTextView"
                        android:layout_weight="1"
                        android:text="@string/message_privacy" />

                    <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chatPwdLayout"
                    style="@style/layoutBg">

                    <TextView
                        style="@style/leftTextView"
                        android:layout_weight="1"
                        android:text="@string/chat_password" />

                    <TextView
                        android:id="@+id/chatPwdStatusTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:text="@string/unsetting"
                        android:textColor="@color/color999"
                        android:textSize="@dimen/font_size_14" />

                    <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lockScreenPwdLayout"
                    style="@style/layoutBg">

                    <TextView
                        style="@style/leftTextView"
                        android:layout_weight="1"
                        android:text="@string/lock_screen_password" />

                    <TextView
                        android:id="@+id/lockScreenPwdStatusTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:text="@string/unsetting"
                        android:textColor="@color/color999"
                        android:textSize="@dimen/font_size_14" />

                    <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/blacklistLayout"
                    style="@style/layoutBg">

                    <TextView
                        style="@style/leftTextView"
                        android:layout_weight="1"
                        android:text="@string/blacklist" />

                    <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="20dp"
                android:paddingBottom="8dp"
                android:text="@string/screen_protection"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/screenshotLayout"
                    style="@style/layoutBgPaddingSmall">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/leftTextView"
                            android:text="@string/screenshot_protection" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/screenshot_protection_desc"
                            android:textColor="@color/color999"
                            android:textSize="@dimen/font_size_12" />
                    </LinearLayout>

                    <com.chat.base.ui.components.SwitchView
                        android:id="@+id/screenshotSwitch"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/screenSaverLayout"
                    style="@style/layoutBg">

                    <TextView
                        style="@style/leftTextView"
                        android:layout_weight="1"
                        android:text="@string/screen_saver" />

                    <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/disconnectSaverLayout"
                    style="@style/layoutBg">

                    <TextView
                        style="@style/leftTextView"
                        android:layout_weight="1"
                        android:text="@string/disconnect_saver" />

                    <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
