<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/accountEt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/hint_input_phone"
        android:inputType="text"
        android:paddingHorizontal="12dp"
        android:textColor="@color/colorDark"
        android:textColorHint="@color/color999"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/codeEt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_bg"
            android:hint="@string/hint_destroy_code"
            android:inputType="number"
            android:paddingHorizontal="12dp"
            android:textColor="@color/colorDark"
            android:textColorHint="@color/color999"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/getCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_btn_solid_blue"
            android:gravity="center"
            android:minWidth="100dp"
            android:paddingHorizontal="16dp"
            android:text="@string/get_verify_code"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_solid_blue"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
