<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homeColor"
        android:orientation="vertical">

        <include layout="@layout/wk_title_bar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingBottom="8dp"
                android:text="@string/screen_protection"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/offlineProtectionLayout"
                    style="@style/layoutBgPaddingSmall">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/leftTextView"
                            android:text="@string/offline_protection" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/offline_protection_desc"
                            android:textColor="@color/color999"
                            android:textSize="@dimen/font_size_12" />
                    </LinearLayout>

                    <com.chat.base.ui.components.SwitchView
                        android:id="@+id/offlineProtectionSwitch"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/screenshotAllowedLayout"
                    style="@style/layoutBgPaddingSmall">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/leftTextView"
                            android:text="@string/screenshot_allowed" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/screenshot_allowed_desc"
                            android:textColor="@color/color999"
                            android:textSize="@dimen/font_size_12" />
                    </LinearLayout>

                    <com.chat.base.ui.components.SwitchView
                        android:id="@+id/screenshotAllowedSwitch"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
